rust/kcl-lib/tests/add_arrays/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing add_arrays.kcl
---
KCL Semantic error

  × semantic: Expected a number, but found an array of `number`, `number`
   ╭────
 1 │ answer = [0, 1] + [2]
   ·          ───┬──
   ·             ╰── tests/add_arrays/input.kcl
   ╰────
